--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
-    "next": "14.2.14",
+    "next": "^14.2.14",
     "next-sanity": "^9.8.32",
     "next-themes": "^0.4.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "rimraf": "^6.0.1",
     "sanity": "^3.69.0",
     "styled-components": "^6.1.14",
@@ -33,8 +33,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^9.18.0",
-    "eslint-config-next": "14.2.14",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^15.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
